--- a/style.css
+++ b/style.css
@@ -1,3 +1,39 @@
-#heading {
-  color: red;
+.header {
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid black;
+}
+.logo {
+  width: 100px;
+}
+.nav-items > ul {
+  display: flex;
+}
+.nav-items > ul > li {
+  padding: 10px;
+  margin: 10px;
+  list-style-type: none;
+  font-size: 28px;
+}
+.search {
+  padding: 10px;
+}
+.res-cards {
+  padding: 5px;
+  width: 200px;
+  height: 300px;
+  margin: 10px;
+}
+.res-cards:hover {
+  cursor: pointer;
+  border: 1px solid black;
+}
+
+.res-logo {
+  width: 100%;
+  height: 50%;
+}
+.res-container {
+  display: flex;
+  flex-wrap: wrap;
 }
