--- a/style.css
+++ b/style.css
@@ -51,3 +51,17 @@
   margin: 10px;
   cursor: pointer;
 }
+
+.shimmer-container {
+  margin-top: 78px;
+  display: flex;
+  flex-wrap: wrap;
+}
+.shimmer-card {
+  margin: 5px;
+  margin-top: 10px;
+  padding: 5px;
+  width: 200px;
+  height: 400px;
+  background-color: #f0f0f0;
+}
